--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width=15, fig.height=10)
 ```
 # **1. Table of Contents**
 |
-| This document implements isolation forest-based anomaly detection algorithms for estimating outlier scores using various helpful packages in <mark style="background-color: #CCECFF">**R**</mark>.    
+| This project explores the various isolation forest-based anomaly detection algorithms for estimating outlier scores using various helpful packages in <mark style="background-color: #CCECFF">**R**</mark>. Methods applied in the analysis to identify abnormal points with patterns significantly deviating away from the remaining data included the **Isolation Forest**, **Extended Isolation Forest**, **Isolation Forest with Split Selection Criterion**, **Fair-Cut Forest**, **Density Isolation Forest** and **Boxed Isolation Forest** algorithms. Using an independent label indicating the valid and outlying points from the data, the different anomaly-detection algorithms were evaluated based on their capability to effectively discriminate both data categories using the receiver operating characteristic (ROC) curve area under the curve (AUC) metric.
 |
 | Outlier detection is a form of unsupervised anomaly detection method aimed at detecting abnormal or unusual observations in a multidimensional domain. The algorithms applied in this study (mostly contained in the <mark style="background-color: #CCECFF">**isotree**</mark> package) attempt to identify local outliers by recursively splitting subsamples of the data according to some feature(s) at random and averaging a decision function based on isolation depth (number of splits required to isolate the samples), while assuming that these deviant points produce noticeably shorter paths from the random partitioning process. 
 |
@@ -1057,9 +1057,9 @@ Status <- ifelse(OD_BIF_Summary$Status=="Valid",0,1)
 | Algorithm performance comparison:
 |
 | **[A]** The isolation forest-based anomaly detection algorithms applied to the <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span> principal component descriptors which were able to sufficiently capture the outlier points based on the higher estimated ROC curve AUC are the following :
-|      **[A.1]** FCF : Fair-Cut Forest (<mark style="background-color: #CCECFF">**isotree**</mark> package)
+|      **[A.1]** **FCF : Fair-Cut Forest** (<mark style="background-color: #CCECFF">**isotree**</mark> package)
 |             **[A.1.1]** ROC Curve AUC = 0.78291
-|      **[A.2]** DIF: Density Isolation Forest (<mark style="background-color: #CCECFF">**isotree**</mark> package)
+|      **[A.2]** **DIF: Density Isolation Forest** (<mark style="background-color: #CCECFF">**isotree**</mark> package)
 |             **[A.2.1]** ROC Curve AUC = 0.77588
 |
 ```{r section_1.6, warning=FALSE, message=FALSE}
