--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R : Estimating Outlier Scores Using Isolation Forest-Based Anomaly Detection Algorithms"
+title: "Unsupervised Learning : Estimating Outlier Scores Using Isolation Forest-Based Anomaly Detection Algorithms"
 author: "John Pauline Pineda"
 date: "February 11, 2023"
 output: 
