--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Unsupervised Learning : Estimating Outlier Scores Using Isolation Forest-Based Anomaly Detection Algorithms"
-author: "John Pauline Pineda"
+author: "<b><a href='https://github.com/JohnPaulinePineda'>John Pauline Pineda</a></b>"
 date: "February 11, 2023"
 output: 
   html_document:
@@ -55,7 +55,7 @@ library(pls)
 library(corrplot)
 library(tidyverse)
 library(lares)
-library(DMwR)
+library(DMwR2)
 library(gridExtra)
 library(rattle)
 library(RColorBrewer)
@@ -539,7 +539,7 @@ splom(~EDA[,sapply(EDA, is.numeric)],
       pch = 16,
       cex = 1,
       alpha = 0.45,
-      auto.key = list(points = TRUE, space = "top"),
+      auto.key = list(points=TRUE, space="top", column=2),
       main = "Pairwise Scatterplots of Principal Component Descriptors",
       xlab = "PCA" )
 
@@ -563,7 +563,7 @@ splom(~EDA[,sapply(EDA, is.numeric)],
       pch = 16,
       cex = 2,
       alpha = 0.45,
-      auto.key = list(points = TRUE, space = "top"),
+      auto.key = list(points=TRUE, space="top", column=2),
       main = "Pairwise Scatterplots of Principal Component Descriptors",
       xlab = "PCA" )
 
@@ -676,7 +676,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_IF_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_IF_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -758,7 +758,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_EIF_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_EIF_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -846,7 +846,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_SCIFOREST_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_SCIFOREST_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -930,7 +930,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_FCF_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_FCF_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -1014,7 +1014,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_DIF_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_DIF_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -1098,7 +1098,7 @@ densityplot( ~ Scores | Label,
             groups = Status,
             xlab = "Outlier Scores",
             ylab = "Density",
-            auto.key = list(columns = (length(levels(OD_BIF_Summary$Status)))))
+            auto.key = list(columns=(length(levels(OD_BIF_Summary$Status)))))
 
 ##################################
 # Evaluating the apparent 
@@ -1190,7 +1190,7 @@ print(OutlierDetectionPeformance_Summary, row.names=FALSE)
                           main = "Anomaly Detection Algorithm Performance Comparison",
                           ylab = "Algorithm",
                           xlab = "Anomaly Detection Performance Metrics",
-                          auto.key = list(adj = 1),
+                          auto.key = list(adj=1, space="top", column=2),
                           type=c("p", "h"),
                           origin = 0,
                           alpha = 0.45,
@@ -1203,7 +1203,7 @@ print(OutlierDetectionPeformance_Summary, row.names=FALSE)
 |
 # **2. Summary** <a name="summary"></a>
 |
-| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_26/docs/Project26_Summary.png)
+| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_26/images/Project26_Summary.png)
 |
 # **3. References**
 |
@@ -1226,7 +1226,7 @@ print(OutlierDetectionPeformance_Summary, row.names=FALSE)
 | **[R Package]** [corrplot](https://cran.r-project.org/web/packages/corrplot/corrplot.pdf) by Taiyun Wei
 | **[R Package]** [tidyverse](https://cran.r-project.org/web/packages/tidyverse/tidyverse.pdf) by Hadley Wickham
 | **[R Package]** [lares](https://cran.rstudio.com/web/packages/lares/lares.pdf) by Bernardo Lares
-| **[R Package]** [DMwR](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
+| **[R Package]** [DMwR2](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
 | **[R Package]** [gridExtra](https://cran.r-project.org/web/packages/gridExtra/gridExtra.pdf) by Baptiste Auguie and Anton Antonov
 | **[R Package]** [rattle](https://cran.r-project.org/web/packages/rattle/rattle.pdf) by Graham Williams
 | **[R Package]** [RColorBrewer](https://cran.r-project.org/web//packages/RColorBrewer/RColorBrewer.pdf) by Erich Neuwirth
